--- a/app/src/main/res/layout/fragment_behavior_intro.xml
+++ b/app/src/main/res/layout/fragment_behavior_intro.xml
@@ -12,7 +12,7 @@
         android:id="@+id/intro1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/behaviorIntro1"
+        tools:text="@string/behaviorIntro1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:id="@+id/intro2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/behaviorIntro2"
+        tools:text="@string/behaviorIntro2"
         app:layout_constraintTop_toBottomOf="@id/emotions"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
