--- a/app/src/main/res/layout/fragment_add_2_experience.xml
+++ b/app/src/main/res/layout/fragment_add_2_experience.xml
@@ -18,15 +18,16 @@
         app:layout_constraintBottom_toTopOf="@id/buttons"
         >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:id="@+id/content"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Experience of Emotion"
                 android:layout_marginTop="16dp"
@@ -41,7 +42,7 @@
 
             <TextView style="@style/TextViewHeading"
                 android:id="@+id/textView1"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="What emotions did you feel in this situation? Choose up to 3, tap to delete:"
                 android:layout_marginTop="16dp"
@@ -52,18 +53,46 @@
                 tools:ignore="HardcodedText"
                 />
 
-            <include
-                android:id="@+id/emotionSelection"
-                layout="@layout/emotion_selection"
-                android:layout_width="0dp"
+            <TextView style="@style/TextViewDatum"
+                android:id="@+id/emotion1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/textView1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:gravity="center"
+                tools:text="Anger (5/10)"
                 />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView style="@style/TextViewDatum"
+                android:id="@+id/emotion2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/textView1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:gravity="center"
+                tools:text="Anger (5/10)"
+                />
+
+            <TextView style="@style/TextViewDatum"
+                android:id="@+id/emotion3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/textView1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:gravity="center"
+                tools:text="Anger (5/10)"
+                />
+
+        </LinearLayout>
 
     </ScrollView>
 
