--- a/app/src/main/res/layout/fragment_add_4_expression.xml
+++ b/app/src/main/res/layout/fragment_add_4_expression.xml
@@ -73,10 +73,12 @@
 
         <CheckBox
             android:id="@+id/bottledCheck"
-            android:text="Check this box if you hid or bottled up your emotions instead of showing them"
+            android:text="Check this box if you hid or bottled up your emotions instead of expressing them"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
             app:layout_constraintTop_toBottomOf="@id/expression"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
