--- a/app/src/main/res/layout/fragment_add_6_assumptions.xml
+++ b/app/src/main/res/layout/fragment_add_6_assumptions.xml
@@ -70,7 +70,7 @@
                 android:importantForAutofill="no" />
 
 
-            <Button
+            <Button android:theme="@style/ButtonStyle"
                 android:id="@+id/readMore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
