--- a/app/src/main/res/layout/fragment_behavior_question_slider.xml
+++ b/app/src/main/res/layout/fragment_behavior_question_slider.xml
@@ -44,12 +44,74 @@
         app:layout_constraintVertical_weight="18"
         >
 
-        <include
-            android:id="@+id/slider"
-            layout="@layout/question_slider"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:orientation="vertical"
+            >
+
+          <!--  <TextView style="@style/TextViewHeading"
+                android:id="@+id/question1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />-->
+
+            <TextView style="@style/TextViewDatum"
+                android:id="@+id/answer1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+<!--
+            <TextView style="@style/TextViewHeading"
+                android:id="@+id/question2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+-->
+
+            <TextView style="@style/TextViewDatum"
+                android:id="@+id/answer2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+<!--
+            <TextView style="@style/TextViewHeading"
+                android:id="@+id/question3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+-->
+
+            <TextView style="@style/TextViewDatum"
+                android:id="@+id/answer3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+<!--
+            <TextView style="@style/TextViewHeading"
+                android:id="@+id/question4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+-->
+
+            <TextView style="@style/TextViewDatum"
+                android:id="@+id/answer4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+            <include
+                android:id="@+id/slider"
+                layout="@layout/question_slider"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </LinearLayout>
 
     </ScrollView>
 
