--- a/app/src/main/res/layout/fragment_replacement_2.xml
+++ b/app/src/main/res/layout/fragment_replacement_2.xml
@@ -23,12 +23,50 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView style="@style/TextViewHeading"
+                android:id="@+id/thoughtsHeading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:textStyle="italic"
+                android:text="You wrote:"
+                app:layout_constraintBottom_toTopOf="@id/thoughts"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_weight="12"
+                app:layout_constraintVertical_chainStyle="spread_inside"
+                tools:ignore="HardcodedText"
+                android:ellipsize="end"
+                android:maxLines="3"
+                />
+
+            <TextView style="@style/TextViewDatum"
+                android:id="@+id/thoughts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toTopOf="@id/slider"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/thoughtsHeading"
+                app:layout_constraintVertical_weight="12"
+                app:layout_constraintVertical_chainStyle="spread_inside"
+                tools:ignore="HardcodedText"
+                android:ellipsize="end"
+                android:maxLines="3"
+                tools:text="My thoughts were long enough to take up more than one line, maybe long enough even for three."
+                />
+
             <include
                 android:id="@+id/slider"
                 layout="@layout/question_slider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/thoughts"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
