--- a/app/src/main/res/layout/fragment_replacement_4_improved_expression.xml
+++ b/app/src/main/res/layout/fragment_replacement_4_improved_expression.xml
@@ -55,10 +55,11 @@
 
             <CheckBox style="@style/TextViewHeading"
                 android:id="@+id/bottledCheck"
-                android:text="Check this box if you hid or bottled up your emotions instead of showing them"
+                android:text="Check this box if you hid or bottled up your emotions instead of expressing them"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintTop_toBottomOf="@id/wouldHaveDone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
