--- a/app/src/main/res/layout/next_previous.xml
+++ b/app/src/main/res/layout/next_previous.xml
@@ -9,13 +9,15 @@
     tools:context=".editentry.AddEntry1Fragment"
     >
 
-    <Button
+    <Button android:theme="@style/ButtonStyle"
         android:id="@+id/previous"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/previous"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:textSize="16sp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
@@ -26,14 +28,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <Button
+    <Button android:theme="@style/ButtonStyle"
         android:id="@+id/next"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/next"
         android:textSize="16sp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/previous"
