--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:background="@color/colorBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,13 +13,7 @@
         android:id="@+id/heading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/behaviorIntro1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/scroll"
-        app:layout_constraintVertical_chainStyle="spread_inside"
-        app:layout_constraintVertical_weight="12"
+        android:layout_marginBottom="8dp"
         tools:ignore="HardcodedText"
         />
 
@@ -26,38 +21,38 @@
         android:id="@+id/scroll"
         android:background="@color/colorBackground"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/heading"
-        app:layout_constraintBottom_toTopOf="@id/done"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         >
 
-    <TextView style="@style/TextViewHeading"
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/heading"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_chainStyle="spread_inside"
-        app:layout_constraintVertical_weight="12"
-        tools:ignore="HardcodedText"
-        />
-    </ScrollView>
+        <LinearLayout
+            android:orientation="vertical"
+            android:background="@color/colorBackground"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
 
-    <Button
-        android:id="@+id/done"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:text="Done"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
-        android:textSize="16sp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintTop_toBottomOf="@id/scroll"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView style="@style/TextViewHeading"
+                android:id="@+id/text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:ignore="HardcodedText"
+                tools:text="@string/assumptionsReadMore"
+                />
+
+            <Button android:theme="@style/ButtonStyle"
+                android:id="@+id/done"
+                android:layout_width="150dp"
+                android:layout_height="48dp"
+                android:text="Done"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="16sp"
+                />
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
